check for overflow issue

--- a/projects/J-News_homepage/css/style.css
+++ b/projects/J-News_homepage/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .container {
-    width: 90%;
+    width: 90vw;
     max-width: 1000px;
     margin: 0 auto;
 }
